[gd_scene load_steps=7 format=3 uid="uid://cwa00fnaobhpi"]

[ext_resource type="Script" path="res://Scripts/Locations/abandoned_place_2.gd" id="1_k14cw"]
[ext_resource type="Texture2D" uid="uid://buq1jojx85k4l" path="res://Assets/Locations/AbandonedCellar2.png" id="1_xoygm"]
[ext_resource type="PackedScene" uid="uid://dpcoerie4vhby" path="res://Scenes/Enemies/enemy.tscn" id="3_ajram"]
[ext_resource type="Resource" uid="uid://bmrkg1a3p2n0u" path="res://Resources/Enemies/TutorialEnemy.tres" id="4_timcu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8roo"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsx0e"]
size = Vector2(20, 158)

[node name="abandoned_place2" type="Node2D"]
script = ExtResource("1_k14cw")

[node name="AbandonedCellar2" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_xoygm")

[node name="Enemy" parent="." instance=ExtResource("3_ajram")]
visible = false
enemy_resource = ExtResource("4_timcu")

[node name="EnemyInteractable" type="Area2D" parent="."]
position = Vector2(427, 117)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyInteractable"]
position = Vector2(-3, -5)
shape = SubResource("RectangleShape2D_s8roo")

[node name="abandonedcellar" type="Area2D" parent="."]
position = Vector2(19, 205)

[node name="CollisionShape2D" type="CollisionShape2D" parent="abandonedcellar"]
position = Vector2(-3, -3)
shape = SubResource("RectangleShape2D_lsx0e")

[connection signal="input_event" from="EnemyInteractable" to="." method="_on_enemy_input_event"]
[connection signal="mouse_entered" from="EnemyInteractable" to="." method="_on_enemy_mouse_entered"]
[connection signal="mouse_exited" from="EnemyInteractable" to="." method="_on_enemy_mouse_exited"]
[connection signal="input_event" from="abandonedcellar" to="." method="_on_abandonedcellar_input_event"]
[connection signal="mouse_entered" from="abandonedcellar" to="." method="_on_abandonedcellar_mouse_entered"]
[connection signal="mouse_exited" from="abandonedcellar" to="." method="_on_abandonedcellar_mouse_exited"]
